fixes for policies undefined and unit tests

--- a/src/app/features/administration/components/tickets/ticket-details/ticket-details.component.html
+++ b/src/app/features/administration/components/tickets/ticket-details/ticket-details.component.html
@@ -209,8 +209,10 @@
   </div>
 </div>
 
+<div *ngIf ="policyDetails">
 <app-authorize-policy-modal>
 </app-authorize-policy-modal>
+</div>
 
 <app-reassign-ticket-modal
   [selectedTickets]="[selectedSpringTickets]"
