--- a/src/app/features/crm/components/activity-management/activity-types/activity-types.component.html
+++ b/src/app/features/crm/components/activity-management/activity-types/activity-types.component.html
@@ -198,11 +198,7 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button
-          type="button"
-          class="btn btn-primary"
-          (click)="createActivityType()"
-        >
+        <button type="button" class="btn btn-primary" (click)="saveActivivty()">
           Save details
         </button>
       </div>
