--- a/src/app/features/fms/cheque-authorization/cheque-authorization.component.html
+++ b/src/app/features/fms/cheque-authorization/cheque-authorization.component.html
@@ -23,9 +23,9 @@
     <div class="row px-3 d-flex justify-content-center">
       <div class="col-lg-3 d-flex">
         <label  class="form-label text-black align-content-center m-0" style="width: 35%;">{{'fms.org' | translate }}:</label>
-        <select class="form-control form-select text-black border-0 fw-medium" id="organization" style="width: 62%;">
+        <select class="form-control form-select text-black border-0 fw-medium" id="organization" style="width: 67%;">
           <option value="" disabled >Select option</option>
-          <option value="" selected>Mutual Benefits Assurance PLC</option>
+          <option value="" selected>Turnkey Africa LTD</option>
         </select>
       </div>
       <div class="col-lg-3 d-flex">
