--- a/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
+++ b/src/app/features/gis/components/policy/components/policy-summary-other-details/policy-summary-other-details.component.html
@@ -4013,8 +4013,8 @@
                     <p>Details about Policy subclasses clauses...</p>
                 </ng-container>
                 <ng-container *ngIf="selectedItem === 6">
-                    <h5> {{'gis.policy.policy_level_perils' | translate}}</h5>
-                    <p>Details about Policy level perils...</p>
+                    <!-- POLICY LEVEL PERIL DETAILS -->
+                    <app-policy-level-perils></app-policy-level-perils>
                 </ng-container>
                 <ng-container *ngIf="selectedItem === 7">
                     <h5>{{'gis.policy.policy_remarks' | translate}}</h5>
